# hertzoggie

./: LICENSE  README.md  pyproject.toml
py-ds/: cookiecutter.json
py-ds/hooks/: pre_gen_project.py
py-ds/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
py-pkg/: cookiecutter.json
py-pkg/hooks/: pre_gen_project.py
py-pkg/{{cookiecutter.project_slug}}/: README.md
