[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.project_email}}>"]
license = "{{cookiecutter.project_license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pyright = "*"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportUnknownMemberType = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 119
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "C4",
  "ISC",
  "ICN",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "TID",
  "PD",
  "PL",
  "TRY",
  "NPY",
  "PERF",
  "RUF",
]
ignore = [
  "D413",
  "D100",
  "D101",
  "D104",
  "D203",
  "D213",
  "ISC001",
  "TRY003",
  "RUF012",
  "PD901",
  "PLR0913",
  "PLR0912",
  "PLR0915",
  "E731",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
